Modified GET /users for pagination
